; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/iconv/extr_bsd_iconv.c___bsd___iconv_get_list.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/iconv/extr_bsd_iconv.c___bsd___iconv_get_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @__bsd___iconv_get_list(i8*** %0, i64* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8***, align 8
  %6 = alloca i64*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8*** %0, i8**** %5, align 8
  store i64* %1, i64** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load i8***, i8**** %5, align 8
  %10 = load i64*, i64** %6, align 8
  %11 = load i32, i32* %7, align 4
  %12 = call i32 @_citrus_esdb_get_list(i8*** %9, i64* %10, i32 %11)
  store i32 %12, i32* %8, align 4
  %13 = load i32, i32* %8, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %3
  %16 = load i32, i32* %8, align 4
  store i32 %16, i32* @errno, align 4
  store i32 -1, i32* %4, align 4
  br label %18

17:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %18

18:                                               ; preds = %17, %15
  %19 = load i32, i32* %4, align 4
  ret i32 %19
}

declare dso_local i32 @_citrus_esdb_get_list(i8***, i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
